Code structure is ready to test for basic flow. Need to think of logic for deadlocks and thinking time. Also need death tracker. Vaz-y.

--- a/philo/Makefile
+++ b/philo/Makefile
@@ -3,7 +3,9 @@ CC = gcc
 CFLAGS = -Wall -Wextra -Werror
 
 SRCS = 	main.c \
-		ft_superatoi.c
+		ft_superatoi.c \
+		philo.c \
+		core.c
 
 OBJS = ${SRCS:.c=.o}
 
